Simplify code with Stream.toList()